<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="168dp"
            android:layout_height="112dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:src="@drawable/kisan_sarthi2"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/Head"
            android:layout_width="328dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:letterSpacing=".08"
            android:text="@string/Head"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/kisan1"
            android:layout_width="182dp"
            android:layout_height="95dp"
            android:layout_margin="10dp"
            android:letterSpacing=".08"
            android:text="@string/kisan1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintStart_toEndOf="@+id/kisan4"
            app:layout_constraintTop_toBottomOf="@+id/Head" />

        <Button
            android:id="@+id/kisan4"
            android:layout_width="182dp"
            android:layout_height="95dp"
            android:layout_margin="10dp"
            android:letterSpacing=".08"
            android:text="@string/kisan3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Head" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/kisan3"
            android:layout_width="182dp"
            android:layout_height="95dp"
            android:layout_margin="10dp"
            android:letterSpacing=".08"
            android:text="@string/kisan4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kisan4" />

        <Button
            android:id="@+id/kisan"
            android:layout_width="182dp"
            android:layout_height="95dp"
            android:layout_margin="10dp"
            android:letterSpacing=".08"
            android:text="@string/Farmers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/kisan4"
            app:layout_constraintTop_toBottomOf="@+id/kisan4" />

    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/blog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/blog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/blog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>
